[FIXES-1] Manage group course selection colors corrections for dark mode

--- a/src/bp-templates/bp-nouveau/readylaunch/css/sass/components/groups-single/_group-manage.scss
+++ b/src/bp-templates/bp-nouveau/readylaunch/css/sass/components/groups-single/_group-manage.scss
@@ -129,13 +129,20 @@
 	.bb-group-meprlms-settings-container .bb-course-activity-selection {
 
 		.select2-container .select2-selection--multiple {
+			background-color: var(--bb-rl-background-color);
 			border-color: var(--bb-rl-border-secondary-color);
 			border-radius: var(--bb-rl-radius-md) !important;
 		}
 
 		.select2-dropdown {
+			background-color: var(--bb-rl-background-color);
 			border-color: var(--bb-rl-border-secondary-color);
 			border-radius: var(--bb-rl-radius-md);
+
+			li.select2-results__option[aria-selected=true] {
+				background-color: var(--bb-rl-background-secondary-color);
+				color: var(--bb-rl-text-color);
+			}
 		}
 
 		.select2-container--default .select2-results__option--highlighted[aria-selected] {
